<resources>
    <string name="app_name">NutriLens</string>
    <string name="title_home">Home</string>
    <string name="title_progress">Progress</string>
    <string name="title_scan">Scan</string>
    <string name="title_recipe">Recipe</string>
    <string name="title_profile">Profile</string>

    <!--    login activity-->
    <string name="invalid_name">Nama tidak boleh kosong</string>
    <string name="invalid_email">Email tidak valid</string>
    <string name="text_email">Masukkan Email</string>
    <string name="invalid_password">Kata sandi minimal 8 karakter</string>

    <string name="welcome_back">Selamat datang!</string>
    <string name="jumlah_kalori">Jumlah Kalori Hari Ini</string>
    <string name="batas_maksimal">Kamu sudah mencapai batas maksimal</string>
    <string name="rekomendasi_masakan">Rekomendasi Masakan Hari Ini</string>
    <string name="title_news">Berita Makanan</string>
    <string name="source_news">liputan6.com</string>
    <string name="description_news">Deskripsi berita makanan</string>


    <string name="progress_mingguan">Progress Mingguan</string>
    <string name="date">date</string>
    <string name="asupan_kalori">Asupan Kalori</string>
    <string name="nutri_score">Nutri-Score</string>
    <string name="detail_nutri_score">Makanan kemasan yang memiliki\n50 kalori</string>


    <string name="dialog_ingin_makan">Apakah anda ingin mengonsumsi makanan ini ?</string>
    <string name="kembali">Kembali</string>
    <string name="yakin">Yakin</string>
    <string name="dialog_nutri_score">Nutri-Score dari makanan ini adalah</string>
    <string name="dialog_kalori">Makanan kemasan ini mengandung %d kalori per 100 gram</string>
    <string name="mengerti">Mengerti</string>

    <string name="resep_makanan">Resep Makanan</string>
    <string name="rekomendasi_masakan_hari_ini">Rekomendasi Masakan Hari Ini</string>
    <string name="kalori_recipe">500 Kalori</string>
    <string name="bahan_recipe">Bahan-bahan:</string>
    <string name="deskripsi_bahan">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="tahapan_recipe">Tahap-tahapan:</string>
    <string name="deskripsi_tahapan">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>

    <string name="profile">Profile</string>
    <string name="name">Nama</string>
    <string name="name_home">username</string>
    <string name="email">Email</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="light_mode">Light Mode</string>
    <string name="dialog_ingin_keluar">Yakin ingin keluar?</string>
    <string name="sukses">Sukses!</string>
    <string name="profile_change">Profile berhasil diubah</string>
    <string name="ubah_username">Ubah Nama</string>
    <string name="ubah_password">Kata Sandi Baru</string>
    <string name="ubah_password_new">Ketik Ulang Kata Sandi Baru</string>
    <string name="change_profile">Ubah Profile</string>
    <string name="berita">Berita</string>
    <string name="logout">Keluar</string>
    <string name="header1_progress">Nutri-Score dihitung dari data pada tabel pernyataan nutrisi yang terdapat pada bagian belakang kemasan dan data komposisi.</string>
    <string name="header2_progress">Nutri-score mengklasifikasikan produk makanan ke dalam lima kategori:</string>
    <string name="kategoriA_progress">Menunjukkan makanan memiliki \nkualitas gizi yang lebih tinggi.</string>
    <string name="kategoriB_progress">Menunjukkan makanan memiliki \nkualitas gizi yang baik.</string>
    <string name="kategoriC_progress">Menunjukkan makanan memiliki \nkualitas gizi yang sedang.</string>
    <string name="kategoriE_progress">Menunjukkan makanan memiliki \nkualitas gizi yang rendah.</string>
    <string name="kategoriD_progress">Menunjukkan makanan memiliki \nkualitas gizi yang lebih rendah.</string>
    <string name="footer_progress">Skor untuk makanan atau minuman tertentu dihitung dengan mengalokasikan poin untuk kandungan per 100 g (atau per 100 mL untuk minuman) dari energi, asam lemak jenuh, karbohidrat, gula, natrium, serat, dan protein.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_login_welcome">Selamat datang kembali!</string>
    <string name="password">Kata Sandi</string>
    <string name="text_password">Masukkan Kata Sandi</string>
    <string name="login">Masuk</string>
    <string name="label_is_have_account">Sudah punya akun?</string>
    <string name="label_is_no_account">Belum punya akun?</string>
    <string name="act_to_login">Masuk disini</string>
    <string name="act_to_register">Daftar disini</string>
    <string name="text_register_welcome">Selamat datang di NutriLens!</string>
    <string name="register">Daftar</string>
    <string name="text_name">Masukkan Nama\n</string>
    <string name="benar">Benar</string>
    <string name="keterangan">*Jika data diatas masih kurang tepat, anda dapat menubah nilainya terlebih dahulu!</string>
    <string name="detail_nutrisi_makanan">Detail Nutrisi Makanan</string>
    <string name="jenis_nutrisi">Kalsium</string>
    <string name="gram">gram</string>
    <string name="process_nutriscore">Proses Nutriscore!</string>
    <string name="takaran_saji">Takaran Saji</string>
    <string name="energi">Energi</string>
    <string name="karbohidrat">Karbohidrat</string>
    <string name="serat">Serat</string>
    <string name="natrium">Natrium</string>

</resources>