<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/root_padding"
    android:background="@color/white"
    tools:context=".ui.register.RegisterActivity">

    <ImageView
        android:id="@+id/register_app_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@id/register_app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/register_app_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/text_register_welcome"
        android:textAlignment="center"
        android:textColor="@color/primary"
        android:textSize="30sp"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintBottom_toTopOf="@id/emailTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_app_icon" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/email"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/register_email_field"
        app:layout_constraintTop_toBottomOf="@id/register_app_name" />

    <com.capstone.nutrilens.ui.customview.EmailEt
        android:id="@+id/register_email_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_email"
        android:layout_marginTop="8dp"
        android:maxLines="1"
        android:padding="13dp"
        android:textSize="15sp"
        android:textColor="@color/primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/usernameTextView"
        app:layout_constraintTop_toBottomOf="@id/emailTextView" />

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/name"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/register_name_field"
        app:layout_constraintTop_toBottomOf="@id/register_email_field" />

    <com.capstone.nutrilens.ui.customview.UsernameEt
        android:id="@+id/register_name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_name"
        android:layout_marginTop="8dp"
        android:maxLines="1"
        android:padding="13dp"
        android:textSize="15sp"
        android:textColor="@color/primary"
        app:layout_constraintBottom_toTopOf="@id/passwordTextView"
        app:layout_constraintTop_toBottomOf="@id/usernameTextView" />

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/password"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/passwordEditTextLayout"
        app:layout_constraintTop_toBottomOf="@id/register_name_field" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordEditTextLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:hintEnabled="false"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toTopOf="@+id/register_button_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextView">

        <com.capstone.nutrilens.ui.customview.PasswordEt
            android:id="@+id/register_password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_password"
            android:maxLines="1"
            android:padding="13dp"
            android:textSize="15sp"
            android:textColor="@color/primary"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_button_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:text="@string/register"
        android:backgroundTint="@color/primary"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/layoutTextRegister"
        app:layout_constraintTop_toBottomOf="@id/passwordEditTextLayout"/>

    <LinearLayout
        android:id="@+id/layoutTextRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_button_register">

        <TextView
            android:id="@+id/textIsHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary"
            android:text="@string/label_is_have_account"
            android:fontFamily="@font/poppins"/>

        <TextView
            android:id="@+id/textToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/act_to_login"
            android:textColor="@color/primary"
            android:fontFamily="@font/poppins_bold"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/register_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>