<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E7E7E7"
    tools:context=".ui.fragment.profile.ProfileFragment">

    <View
        android:id="@+id/colorBox"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:background="@drawable/rounded_bottom_box"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_profile"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@id/colorBox"
        app:layout_constraintBottom_toBottomOf="@id/colorBox"
        app:layout_constraintStart_toStartOf="@id/colorBox"
        app:layout_constraintEnd_toEndOf="@id/colorBox" />

    <View
        android:id="@+id/colorBox2"
        android:layout_width="match_parent"
        android:layout_height="480dp"
        android:background="@drawable/rounded_box_profile"
        app:layout_constraintTop_toBottomOf="@id/colorBox"
        android:layout_marginTop="36dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        tools:src="@tools:sample/avatars"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="@id/colorBox2"
        app:layout_constraintStart_toStartOf="@id/colorBox2"
        app:layout_constraintEnd_toEndOf="@id/colorBox2" />

    <TextView
        android:id="@+id/usernameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/colorBox2"
        app:layout_constraintStart_toStartOf="@id/colorBox2"
        app:layout_constraintEnd_toEndOf="@id/colorBox2"
        android:layout_marginTop="160dp" />

    <TextView
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/colorBox2"
        app:layout_constraintStart_toStartOf="@id/colorBox2"
        app:layout_constraintEnd_toEndOf="@id/colorBox2"
        android:layout_marginTop="190dp" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dark_mode"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="@id/colorBox2"
        app:layout_constraintStart_toStartOf="@id/colorBox2"
        app:layout_constraintEnd_toEndOf="@id/colorBox2"
        android:layout_marginTop="230dp" />

    <Button
        android:id="@+id/buttonProfile"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:background="@drawable/bg_button"
        android:text="@string/change_profile"
        app:layout_constraintTop_toTopOf="@id/colorBox2"
        app:layout_constraintStart_toStartOf="@id/colorBox2"
        app:layout_constraintEnd_toEndOf="@id/colorBox2"
        android:layout_marginTop="320dp" />

    <Button
        android:id="@+id/buttonLogout"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:background="@drawable/bg_button"
        android:text="@string/logout"
        app:layout_constraintTop_toTopOf="@id/colorBox2"
        app:layout_constraintStart_toStartOf="@id/colorBox2"
        app:layout_constraintEnd_toEndOf="@id/colorBox2"
        android:layout_marginTop="380dp" />

</androidx.constraintlayout.widget.ConstraintLayout>